# adp-cli

./: .gitignore  CHANGELOG.md  Dockerfile.build  LICENSE  MANIFEST.in  PROJECT-CREATION-REPORT.md  README.md  README.zh.md  TEST_REPORT.md  adp_cli.spec  coverage.json  package.json  parse_result.json  pyproject.toml  requirements-prod.txt  requirements.txt  result.json  setup.py  test  test_coverage_report.txt  test_report.txt  test_report_final.txt
.claude/: CLAUDE.md  settings.local.json
.claude/skills/: openclaw-init.md
.github/workflows/: build.yml
docs/: ADP-CLI-USER-MANUAL-zh.md  ADP-CLI-USER-MANUAL.md  AGENT-OPTIMIZATION.md  BUILD.md  CLI-DEVELOPER-GUIDE.md  CLI-USER-GUIDE.md  CROSS-PLATFORM-SETUP.md  DOCKER-BUILD-GUIDE.md  GLIBC-COMPATIBILITY.md  PACKAGING-QUICKSTART.md  PACKAGING.md  PROJECT-SUMMARY.md  PYPI-INSTALL-GUIDE.md  cli工具.md
scripts/: README.md  adp-init.bat  adp-init.ps1  adp-init.sh  build-all.js  build-linux-matrix-docker.sh  build.bat  build.sh  build_all.py  download-binary.js  install.bat  install.ps1  install.sh  install_adp_cli.py  install_test.bat  install_test.ps1  install_test.sh  publish.bat  publish.sh
src/adp_cli/: __init__.py  cli.py  i18n.py
src/adp_cli/_pyinstaller_hooks/: __init__.py  hook-pydantic.py  hook-pygments.py  (+2 more)
tests/: TEST_REPORT.md  TEST_SUMMARY.md  __init__.py  test_api_client.py  test_api_client_extended.py  test_cli_commands.py  test_cli_integration.py  test_config.py  test_config_extended.py  test_file_handler.py  test_file_handler_extended.py  test_i18n.py  test_output_formatter.py  test_qps_limiter.py
(+6 files in other folders)
